<resources>
    <string name="app_name">myBarber</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_phone_hint">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="home">HOME</string>
    <string name="cc">+1</string>
    <string name="skip">SKIP</string>
    <string name="show_menu">Show Drawer</string>

    // Nav Drawer
    <string name="book_appt">Book Appointment</string>
    <string name="showcase">Showcase</string>
    <string name="offers">Offers</string>
    <string name="hair_care_products">Hair Care Products</string>
    <string name="contact_us">Contact Us</string>
    <string name="working_hours">Business Hours</string>
    <string name="user_ratings">User Ratings</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="view_services">View Services</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sign Out</string>
    <string name="showcase_scrolling_text">These Haircuts were chosen by YOU, the community!\u0020\u0020\u0020 Our barbers and hair artists are really talented and we appreciate all of your business!.\u0020\u0020\u0020 Want your recent cut featured here? Talk to your barber after your next visit for more information!</string>
    <string name="home_scrolling_text">Welcome to myBarber! \u0020\u0020\u0020 Today\'s specials include 15% off boys haircuts. \u0020\u0020\u0020 Our business hours are 9am - 5pm. \u0020\u0020\u0020 Please remember to schedule an appointment as we are no longer taking walk-ins. \u0020\u0020\u0020 Thank You!</string>
    <string name="more_options">More Options</string>
    <string name="pl_date">7/27/2022</string>
    <string name="pl_notification">Notification</string>
    <string name="error">error</string>
    <string name="no_notifications">No notifications to show</string>
    <string name="scroll_images">Scroll Images</string>
    <string name="haircuts">Haircuts</string>
    <string name="service_img">image</string>
    <string name="pl_duration">15 Minutes</string>
    <string name="pl_title">Bald Fade</string>
    <string name="dollar_sign">$</string>
    <string name="pl_price">30</string>
    <string name="highlighted_cuts">Highlighted Cuts</string>
    <string name="notifications">Notifications</string>
    <string name="_1">1</string>
    <string name="noti_bell">noti_bell</string>
    <string name="call_us">Call Us</string>
    <string name="maps">Maps</string>
    <string name="visit_us">Visit Us</string>
    <string name="back">back</string>
    <string name="services">Services</string>
    <string name="beard_styles">Beard Styles</string>
    <string name="app_version">Version 1.0.1</string>
    <string name="developed_by">Developed By</string>
    <string name="websites">Websites</string>
    <string name="website_url">https://brianjr03.github.io<a href="https://brianjr03.github.io" /></string>
    <string name="company_name">ASAP Industries</string>
    <string name="linkedIn_url">https://www.linkedin.com/in/brianjr03/</string>
    <string name="business_hours">Business Hours</string>
    <string name="open_caps">OPEN</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="closed_caps">CLOSED</string>
    <string name="business_hours_time">9 am - 5 pm</string>
    <string name="business_hours_time_sat">9 am - 2 pm</string>
    <string name="pl_barber_name">Greg Wilson</string>
    <string name="barbers">Barbers</string>
    <string name="select_profile_pic">Select Profile Picture</string>
    <string name="_100">100</string>
    <string name="_45_min">45 Min</string>
    <string name="service_name">Service name</string>
    <string name="_9_00_am">9:00 AM</string>
    <string name="select_time">Select Time</string>
    <string name="change_barber">Change Barber</string>
    <string name="continueText">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="brian_jr">Brian Jr</string>
    <string name="summary">Summary</string>
    <string name="ex_date">Sat 23 Mar, 2022</string>
    <string name="ex_time">3:30 PM - 3:45 PM</string>
    <string name="ex_duration">15 minutes</string>
    <string name="barber">Barber</string>
    <string name="ex_cost">Total Cost: $30</string>
    <string name="view_coupons">View Coupons</string>
    <string name="appt_num">Appointment Number: 233</string>
    <string name="reschedule">Reschedule</string>
    <string name="appt_instructions">Share the QR Code or Appt Number\nwith your barber upon arrival</string>
    <string name="appt_details">Appointment Details</string>
    <string name="pl_day_month">08 Aug</string>
    <string name="no_time_selected">No Time Selected</string>
    <string name="no_date_selected">No Date Selected</string>
    <string name="holiday">HOLIDAY</string>

    <string name="total_cost_details">"Total Cost: $%1$d"</string>
    <string name="appt_time">"%1$s - %2$s"</string>
    <string name="appt_duration">"%1$d Minutes"</string>

    <string name="appt_start_time">"Starting at %1$s"</string>
    <string name="services_cost">"$%1$d"</string>
    <string name="services_duration">"%1$d MIN"</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="childrens">Childrens</string>
    <string name="selected_barber">Selected Barber</string>
    <string name="select_1_time_slot_s">Select %1$d time slot(s)</string>

</resources>