<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.BusinessHoursActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="650dp" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/hours_back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10dp"
        android:background="@color/transparent_bg_color"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/arrow_back_36"
        app:layout_constraintBottom_toBottomOf="@id/business_hours_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/business_hours_tv" />

    <TextView
        android:id="@+id/business_hours_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/business_hours"
        android:textColor="@color/blueish_idk"
        android:textSize="@dimen/activity_header_text_size"
        app:layout_constraintBottom_toBottomOf="@id/guideline_grid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/open_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/open_caps"
        android:textColor="@color/blueish_idk"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_grid" />

    <TextView
        android:id="@+id/sunday_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_40dp"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/sunday"
        android:textColor="@color/blueish_idk"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toStartOf="@id/guideline_mid"
        app:layout_constraintTop_toBottomOf="@id/open_tv" />

    <TextView
        android:id="@+id/sunday_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginStart="@dimen/_40dp"
        android:text="@string/closed_caps"
        android:textColor="@color/blueish_idk"
        android:textSize="@dimen/_20sp"
        app:layout_constraintStart_toEndOf="@id/guideline_mid"
        app:layout_constraintTop_toBottomOf="@id/open_tv" />

    <TextView
        android:id="@+id/monday_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_40dp"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/monday"
        android:textColor="@color/blueish_idk"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toStartOf="@id/guideline_mid"
        app:layout_constraintTop_toBottomOf="@id/sunday_tv" />

    <TextView
        android:id="@+id/monday_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginStart="@dimen/_40dp"
        android:text="@string/business_hours_time"
        android:textColor="@color/blueish_idk"
        android:textSize="@dimen/_20sp"
        app:layout_constraintStart_toEndOf="@id/guideline_mid"
        app:layout_constraintTop_toBottomOf="@id/sunday_tv" />

    <TextView
        android:id="@+id/tuesday_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_40dp"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/tuesday"
        android:textColor="@color/blueish_idk"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toStartOf="@id/guideline_mid"
        app:layout_constraintTop_toBottomOf="@id/monday_tv" />

    <TextView
        android:id="@+id/tuesday_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginStart="@dimen/_40dp"
        android:text="@string/business_hours_time"
        android:textColor="@color/blueish_idk"
        android:textSize="@dimen/_20sp"
        app:layout_constraintStart_toEndOf="@id/guideline_mid"
        app:layout_constraintTop_toBottomOf="@id/monday_hours" />

    <TextView
        android:id="@+id/wednesday_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_40dp"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/wednesday"
        android:textColor="@color/blueish_idk"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toStartOf="@id/guideline_mid"
        app:layout_constraintTop_toBottomOf="@id/tuesday_tv" />

    <TextView
        android:id="@+id/wednesday_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginStart="@dimen/_40dp"
        android:text="@string/business_hours_time"
        android:textColor="@color/blueish_idk"
        android:textSize="@dimen/_20sp"
        app:layout_constraintStart_toEndOf="@id/guideline_mid"
        app:layout_constraintTop_toBottomOf="@id/tuesday_hours" />

    <TextView
        android:id="@+id/thursday_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_40dp"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/thursday"
        android:textColor="@color/blueish_idk"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toStartOf="@id/guideline_mid"
        app:layout_constraintTop_toBottomOf="@id/wednesday_tv" />

    <TextView
        android:id="@+id/thursday_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginStart="@dimen/_40dp"
        android:text="@string/business_hours_time"
        android:textColor="@color/blueish_idk"
        android:textSize="@dimen/_20sp"
        app:layout_constraintStart_toEndOf="@id/guideline_mid"
        app:layout_constraintTop_toBottomOf="@id/wednesday_tv" />

    <TextView
        android:id="@+id/friday_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_40dp"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/friday"
        android:textColor="@color/blueish_idk"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toStartOf="@id/guideline_mid"
        app:layout_constraintTop_toBottomOf="@id/thursday_tv" />

    <TextView
        android:id="@+id/friday_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginStart="@dimen/_40dp"
        android:text="@string/business_hours_time"
        android:textColor="@color/blueish_idk"
        android:textSize="@dimen/_20sp"
        app:layout_constraintStart_toEndOf="@id/guideline_mid"
        app:layout_constraintTop_toBottomOf="@id/thursday_tv" />

    <TextView
        android:id="@+id/saturday_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_40dp"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/saturday"
        android:textColor="@color/blueish_idk"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toStartOf="@id/guideline_mid"
        app:layout_constraintTop_toBottomOf="@id/friday_tv" />

    <TextView
        android:id="@+id/saturday_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginStart="@dimen/_40dp"
        android:text="@string/business_hours_time_sat"
        android:textColor="@color/blueish_idk"
        android:textSize="@dimen/_20sp"
        app:layout_constraintStart_toEndOf="@id/guideline_mid"
        app:layout_constraintTop_toBottomOf="@id/friday_tv" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>