<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.NotificationsActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.11" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/about_back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10dp"
        android:background="@color/transparent_bg_color"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/arrow_back_36"
        app:layout_constraintBottom_toBottomOf="@id/about_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/about_tv" />

    <TextView
        android:id="@+id/about_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textColor="@color/blueish_idk"
        android:textSize="@dimen/activity_header_text_size"
        app:layout_constraintBottom_toBottomOf="@id/guideline_grid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/app_name"
        android:textColor="@color/blueish_idk"
        android:textSize="@dimen/_30sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_grid"
        app:layout_constraintVertical_bias="0.399" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_100dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/barber_lottie" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:textColor="@color/blueish_idk"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animation_view" />

    <TextView
        android:id="@+id/devBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/developed_by"
        android:textColor="@color/blueish_idk"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/version" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/dev_pic"
        android:layout_width="@dimen/_100dp"
        android:layout_height="@dimen/_100dp"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/devBy" />

    <TextView
        android:id="@+id/dev_company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/company_name"
        android:textColor="@color/blueish_idk"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dev_pic" />

    <TextView
        android:id="@+id/website_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/websites"
        android:textColor="@color/blueish_idk"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dev_company_name" />

    <TextView
        android:id="@+id/website_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:text="@string/website_url"
        android:textColor="@color/blueish_idk"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/website_label" />

    <TextView
        android:id="@+id/linkedIn_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:text="@string/linkedIn_url"
        android:textColor="@color/blueish_idk"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/website_url" />


</androidx.constraintlayout.widget.ConstraintLayout>