<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="jr.brian.mybarber.viewmodel.SignUpViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sign_up_root"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_350dp"
        android:layout_gravity="center">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="125dp"
            android:layout_height="117dp"
            android:visibility="@{viewModel.isProcessing? View.VISIBLE: View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/barber_lottie" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/fullName_et"
            android:layout_width="@dimen/_250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_20dp"
            android:autofillHints=""
            android:backgroundTint="@color/blueish_idk"
            android:hint="@string/full_name"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@id/mobileNo_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/mobileNo_et"
            android:layout_width="@dimen/_165dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20dp"
            android:autofillHints=""
            android:backgroundTint="@color/blueish_idk"
            android:hint="@string/mobile_phone_hint"
            android:inputType="number"
            android:maxLines="1"
            android:text="@={viewModel.mobileNo}"
            app:layout_constraintBottom_toTopOf="@id/password_et"
            app:layout_constraintEnd_toEndOf="@id/fullName_et" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/country_code_et"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20dp"
            android:autofillHints=""
            android:backgroundTint="@color/blueish_idk"
            android:hint="@string/cc"
            android:inputType="number"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@id/password_et"
            app:layout_constraintStart_toStartOf="@id/fullName_et" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password_et"
            android:layout_width="@dimen/_250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20dp"
            android:autofillHints=""
            android:backgroundTint="@color/blueish_idk"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="@={viewModel.password}"
            app:layout_constraintBottom_toTopOf="@id/cPassword_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/cPassword_et"
            android:layout_width="@dimen/_250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20dp"
            android:autofillHints=""
            android:backgroundTint="@color/blueish_idk"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@id/sign_up_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_btn"
            android:layout_width="@dimen/_250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/blueish_idk"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>