<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10dp"
    android:paddingBottom="1dp"
    app:cardBackgroundColor="@color/blueish_idk"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:backgroundTint="@color/blueish_idk"
        android:padding="8dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/service_image"
            android:layout_width="@dimen/_100dp"
            android:layout_height="@dimen/_100dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/profile_pl_80"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_service_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:shadowColor="@color/white"
            android:text="@string/service_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/service_image"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/tv_duration_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:contentDescription="@string/close"
            app:layout_constraintStart_toEndOf="@id/service_image"
            app:layout_constraintTop_toBottomOf="@id/tv_service_name"
            app:srcCompat="@drawable/clock_24" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_marginTop="10dp"
            android:text="@string/_45_min"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/tv_duration_icon"
            app:layout_constraintTop_toBottomOf="@id/tv_service_name" />

        <TextView
            android:id="@+id/tv_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/_100"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/tv_duration_icon"
            app:layout_constraintTop_toBottomOf="@id/tv_duration_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>